<resources>
    <string name="app_name">Zooka Result</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>
    <string name="developed_by_kuldeep_siraswar">Developed By:- Kuldeep Siraswar</string>
    <string name="button_text">Enable</string>
    <string name="data_on_message"><![CDATA[Please Check Your Internet Connection & Please Turn On Your data Connection]]></string>
    <string name="no_internet_connection_available">No Internet connection Available</string>
    <string name="oops">Oops</string>
    <string name="today_updates">Today Updates</string>
    <string name="latest_jobs">Latest Jobs</string>
    <string name="latest_result">Latest Result</string>
    <string name="admit_card">Admit Card</string>
    <string name="notification_news">Notification</string>
    <string name="university_form">University Form</string>
    <string name="entrance_exams">Entrance-Exams</string>
    <string name="schoolarship_form">Schoolarship Form</string>
    <string name="online_services">Online Services</string>
    <string name="answer_key">Answer Key</string>
    <string name="cut_off">Cut-Off</string>
    <string name="syllabus">Syllabus</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
</resources>